// This is your Prisma schema file,
// learn more about it in the docs: https://pris.ly/d/prisma-schema

// Get a free hosted Postgres database in seconds: `npx create-db`

generator client {
  provider = "prisma-client-js"
}

generator dbml {
  provider = "prisma-dbml-generator"
}

datasource db {
  provider = "postgresql"
}

enum BlockType {
  Activity
  Achievement
  Project
  Learning
}

model User {
  id        Int       @id @default(autoincrement())
  name      String?   @unique
  subject   String
  blocks    Block[]
  password  String
}

model Block {
  id        Int       @id @default(autoincrement())
  userID    Int
  user      User      @relation(fields: [userID], references: [id], onDelete: Cascade)
  type      BlockType
  order     Int
  
  activity    ActiveBlock?
  achievement AchievementBlock?
  project     ProjectBlock?
  learning    LearningBlock?
}

model ActiveBlock {
  id        Int       @id @default(autoincrement())
  blockID   Int       @unique
  block     Block     @relation(fields: [blockID], references: [id], onDelete: Cascade)
  title     String
  role      String    // 해당 블록이 어느 분야에 속하는지를 표현
  period    String
  detail    String
  proofLink String?
}

model AchievementBlock {
  id        Int       @id @default(autoincrement())
  blockID   Int       @unique
  block     Block     @relation(fields: [blockID], references: [id], onDelete: Cascade)
  
  title     String
  date      String    // 활동 기간
  role      String
  detail    String
}

model ProjectBlock {
  id        Int       @id @default(autoincrement())
  blockID   Int       @unique
  block     Block     @relation(fields: [blockID], references: [id], onDelete: Cascade)
  
  title     String
  role      String
  period    String
  detail    String
}


model LearningBlock {
  id        Int       @id @default(autoincrement())
  blockID   Int       @unique
  block     Block     @relation(fields: [blockID], references: [id], onDelete: Cascade)
  
  title     String
  role      String
  class     String
  detail    String
}